syntax = "proto3";

//生成文件所在包名
option java_package = "cn.aberic.lilydb.connector.grpc";
//生成的java文件名
option java_outer_classname = "ConfigProto";

// protoc --java_out=plugins=grpc:. api/*.proto
// protoc --go_out=plugins=grpc:. api/*.proto
package api;

// Conf 数据库引擎对象
message Config {
    // Port 开放端口，便于其它应用访问
    string Port = 1;
    // RootDir Lily服务默认存储路径
    string RootDir = 2;
    // DataDir Lily服务数据默认存储路径
    string DataDir = 3;
    // LogDir Lily服务默认日志存储路径
    string LogDir = 4;
    // LimitOpenFile 限制打开文件描述符次数
    int32 LimitOpenFile = 5;
    // TLS 是否开启 TLS
    bool TLS = 6;
    // TLSServerKeyFile lily服务私钥
    string TLSServerKeyFile = 7;
    // TLSServerCertFile lily服务数字证书
    string TLSServerCertFile = 8;
    // Limit 是否启用服务限流策略
    bool Limit = 9;
    // LimitMillisecond 请求限定的时间段（毫秒）
    int32 LimitMillisecond = 10;
    // LimitCount 请求限定的时间段内允许的请求次数
    int32 LimitCount = 11;
    // LimitIntervalMillisecond 请求允许的最小间隔时间（微秒），0表示不限
    int32 LimitIntervalMicrosecond = 12;
    // LilyLockFilePath Lily当前进程地址存储文件地址
    string LilyLockFilePath = 13;
    // LilyBootstrapFilePath Lily重启引导文件地址
    string LilyBootstrapFilePath = 14;
}